--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,40 @@
 
 {% block content %}
 
-<h1>YOU HAVE WORKING SOFTWARE, YOU RULE!!!</h1>
+<!-- Page header -->
+<div class="page-header">
+    <h1>Find your next Seat</h1>
+</div>
+<div class="well">
+    Enter a starting and ending destination to look for rides.
+</div>
+
+<form action="/application" method="post">
+    <div class="form-group">
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <div class="input-group">
+                <label for="starting">Starting Destination</label>
+                <input type="text" class="form-control" id="starting" name="starting" 
+                aria-describedby="starting destination" placeholder="Enter Starting Location" required>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6">
+            <div class="input-group">
+                <label for="ending">Ending Destination</label>
+                <input type="text" class="form-control" id="ending" name="ending" 
+                aria-describedby="ending destination" placeholder="Enter Ending Location" required>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <!-- submit button -->
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    </div>
+    </form>
 
 {% endblock %}
