--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 <body>
 
   <!-- Show flashed messages, if any-->
-<!--   <div>
+  <div>
   {% with messages=get_flashed_messages() %}
     {% if messages %}
       <fieldset>
@@ -44,7 +44,7 @@
       </fieldset>
     {% endif %}
   {% endwith %}
-</div> -->
+</div>
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -56,14 +56,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active" id="all-rides"><a href="#">All Rides <span class="sr-only">(current)</span></a></li>
-        <!-- <li><a href="#">Link</a></li> -->
+        <li class="active" id="all-rides"><a href="/search?query=all">All Rides <span class="sr-only">(current)</span></a></li>
+        <li><a href="/post-ride">Post Ride</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
