--- a/templates/base.html
+++ b/templates/base.html
@@ -83,8 +83,25 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
+
+
+        {% if session.get('current_user') %}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/profile">Profile</a></li>
+
+        {% else %}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/register">Register</a></li>
+        {% endif %}
+
+
+
       <ul class="nav navbar-nav navbar-right">
+        {% if session.get('current_user') %}
+        <li><a href="/logout">Logout</a></li>
+        {% else %}
         <li><a href="/login">Login</a></li>
+        {% endif %}
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
