--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -87,9 +87,16 @@
 
 
         <!-- submit button -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="ride-form-submit" class="btn btn-primary">Submit</button>
 
     </div>
 </form>
+
+<script> 
+
+
+
+
+</script>
 
 {% endblock %}
