Added user profile pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
 
         {% if session.get('current_user') %}
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/profile">Profile</a></li>
+          <li><a href="/profile/{{ session.get('current_user') }}">Profile</a></li>
 
         {% else %}
         <ul class="nav navbar-nav navbar-right">
