--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -15,7 +15,7 @@
 <form action="/post-ride" method="post">
     <div class="form-group">
 
-        <div class="row">
+<!--         <div class="row">
             <div class="col-xs-8">
                 <label for="driver">Driver</label>
                 <div class="input-group">
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <br>
+        <br> -->
 
         <div class="row">
             <div class="col-xs-8">
@@ -94,14 +94,14 @@
 
 <script> 
 
-    var submitRide = $('#ride-form-submit');
+    // var submitRide = $('#ride-form-submit');
 
-    function checkLoggedIn(evt) {
-        evt.preventDefault();
+    // function checkLoggedIn(evt) {
+    //     evt.preventDefault();
         
-    }
+    // }
 
-    submitRide.on('click', checkLoggedIn);
+    // submitRide.on('click', checkLoggedIn);
 
 
 
