Changed logout form

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,9 +118,9 @@
 </nav>
 
   {% block content %} <!-- Block content --> {% endblock %}
-
+<!-- 
 <script src="http://code.jquery.com/jquery.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
