--- a/templates/search.html
+++ b/templates/search.html
@@ -47,20 +47,26 @@
       <tr>
         <th>Date</th>
         <th>Driver</th>
-        <th>Start</th>
-        <th>End</th>
+        <th>From</th>
+        <th>Time</th>
+        <th>To</th>
+        <th>Time</th>
         <th>Seats</th>
+        <th>Cost</th>
         <th>Request</th>
       </tr>
     </thead>
     <tbody>
     {% for ride in rides %}
       <tr>
-        <td>{{ ride.date.strftime('%Y-%m-%d') }}</td>
+        <td>{{ ride.start_timestamp.strftime('%Y-%m-%d') }}</td>
         <td>{{ ride.user.name }}</td>
-        <td>{{ ride.start_location }}</td>
-        <td>{{ ride.end_location }}</td>
+        <td>{{ ride.start_city }}, {{ ride.start_state }}</td>
+        <td>{{ ride.start_timestamp.strftime('%H:%M')}}</td>
+        <td>{{ ride.end_city }}, {{ ride.end_state }}</td>
+        <td>{{ ride.end_timestamp.strftime('%H:%M')}}</td>
         <td>{{ ride.seats }}</td>
+        <td>{{ ride.cost }}</td>
         <td>
             <form action="/request-seats" method="POST">
                 <select name='seats'>
