--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,17 @@
     Enter a starting and ending destination to look for rides.
 </div>
 
+
+
+
+
 <form action="/search">
     <div class="form-group">
         <div class="row">
             <div class="col-xs-12 col-sm-6">
-                <div class="input-group">
+                <div class="input-group Autocomplete SearchBox">
                     <label for="starting">Starting Destination</label>
+                    <p>Enter City, State or Zip</p>
                     <input type="text" class="form-control" id="starting" name="starting" 
                     aria-describedby="starting destination" placeholder="Enter Starting Location" required>
                 </div>
@@ -26,6 +31,7 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
                     <label for="ending">Ending Destination</label>
+                    <p>Enter City, State or Zip</p>
                     <input type="text" class="form-control" id="ending" name="ending" 
                     aria-describedby="ending destination" placeholder="Enter Ending Location" required>
                 </div>
@@ -38,5 +44,6 @@
 
     </div>
 </form>
+
 
 {% endblock %}
