--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet"
-        href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/united/bootstrap.min.css">
+  <!-- <link rel="stylesheet"
+        href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/united/bootstrap.min.css"> -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <title>{% block title %} Title {% endblock %}</title>
   <style>
       /* navbar */
@@ -118,9 +120,9 @@
 </nav>
 
   {% block content %} <!-- Block content --> {% endblock %}
-<!-- 
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
+
+<!-- <script src="http://code.jquery.com/jquery.js"></script> -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
 </html>
